[gd_scene load_steps=2 format=3 uid="uid://ct3tyvfj3kx3"]

[ext_resource type="Script" uid="uid://bno7iakat0306" path="res://scripts/PlaceholderScreen.gd" id="1_jcse1"]

[node name="PlaceholderSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jcse1")
title_key = "placeholder_settings"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings â€” Coming soon"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
